; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/heap/extr_syncscan.c_ss_get_location.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/heap/extr_syncscan.c_ss_get_location.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@SyncScanLock = common dso_local global i32 0, align 4
@LW_EXCLUSIVE = common dso_local global i32 0, align 4
@LOG = common dso_local global i32 0, align 4
@trace_syncscan = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ss_get_location(%struct.TYPE_4__* %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i32, i32* @SyncScanLock, align 4
  %7 = load i32, i32* @LW_EXCLUSIVE, align 4
  %8 = call i32 @LWLockAcquire(i32 %6, i32 %7)
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i64 @ss_search(i32 %11, i32 0, i32 0)
  store i64 %12, i64* %5, align 8
  %13 = load i32, i32* @SyncScanLock, align 4
  %14 = call i32 @LWLockRelease(i32 %13)
  %15 = load i64, i64* %5, align 8
  %16 = load i64, i64* %4, align 8
  %17 = icmp sge i64 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %2
  store i64 0, i64* %5, align 8
  br label %19

19:                                               ; preds = %18, %2
  %20 = load i64, i64* %5, align 8
  ret i64 %20
}

declare dso_local i32 @LWLockAcquire(i32, i32) #1

declare dso_local i64 @ss_search(i32, i32, i32) #1

declare dso_local i32 @LWLockRelease(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
